# ardupilot_gazebo

./: CMakeLists.txt  README.md  package.xml
models/camera/: model.config  model.sdf
models/gimbal_small_2d/: model.sdf
models/iris_with_standoffs/: model.sdf
models/iris_with_standoffs_demo2/: model.sdf
models/webcam/: model.config  model.sdf
src/: setup.sh.in
worlds/: iris_arducopter_demo2.world
